--- a/apps/weather-api/deployment.yaml
+++ b/apps/weather-api/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: api
-        image: weather-api:2.0
+        image: weather-api:latest
         imagePullPolicy: Never
         ports:
         - containerPort: 8080  # Single dash, no indentation issues
