--- a/apps/weather-consumer/deployment.yaml
+++ b/apps/weather-consumer/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: consumer
-        image: weather-consumer:2.0
+        image: weather-consumer:latest
         imagePullPolicy: Never
         env:
         - name: KAFKA_BOOTSTRAP_SERVERS
