--- a/apps/weather-producer/deployment.yaml
+++ b/apps/weather-producer/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: producer
-        image: weather-producer:2.0
+        image: weather-producer:latest
         imagePullPolicy: Never
         env:
         - name: KAFKA_BOOTSTRAP_SERVERS
