--- a/apps/weather-stream/deployment.yaml
+++ b/apps/weather-stream/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: stream
-        image: weather-stream:2.0
+        image: weather-stream:latest
         imagePullPolicy: Never
         env:
         - name: KAFKA_BOOTSTRAP_SERVERS
